--- a/index.html
+++ b/index.html
@@ -56,37 +56,48 @@
     <section class="hero hero--split" data-parallax data-hero-rotator>
       <div class="container">
         <div class="hero__copy">
-          <span class="badge">Bend, Oregon</span>
-          <p class="hero__eyebrow">Stonework that endures</p>
-          <h1>Outdoor living spaces shaped for high-desert life</h1>
-          <p class="hero__intro">Wrenley Built engineers patios, walls, and walkways with drainage, compaction, and finishing built to ride out freeze/thaw seasons.</p>
-          <div class="hero__actions">
-            <a class="btn btn-primary" href="contact.html#quote">Request a quote</a>
-            <a class="hero__link" href="projects.html">View the gallery</a>
+          <div class="hero-eyebrow">
+            <span class="badge badge--on-hero">
+              <span aria-hidden="true">●</span> Bend, Oregon
+            </span>
           </div>
-          <ul class="hero__points">
-            <li>Laser-aligned layout with rigid edge restraint</li>
-            <li>Geotextile, drainage, and compaction tuned to your soil</li>
+          <h1>Outdoor living spaces shaped for high-desert life</h1>
+          <p class="hero__intro">Wrenley Built crafts stonemasonry, paver patios, and walkways that hold up through Bend’s freeze/thaw seasons.</p>
+          <div class="hero__actions cta-row">
+            <a class="btn btn-primary" href="/contact.html#quote">Request a quote</a>
+            <a class="btn btn-outline" href="/projects.html">View the gallery</a>
+          </div>
+          <ul class="hero__points hero-points">
+            <li>String-line layout with clean edges and consistent joints</li>
+            <li>Base, drainage, and compaction sized for your site</li>
             <li>Owner-operated crew from demo to final sweep</li>
           </ul>
-          <div class="hero__stats">
-            <div class="hero__stat"><strong>15 yrs</strong><span>Combined craft on the tools</span></div>
-            <div class="hero__stat"><strong>40+</strong><span>Central Oregon installs</span></div>
-            <div class="hero__stat"><strong>5 yr</strong><span>Workmanship guarantee</span></div>
+          <div class="trust-highlights">
+            <ul class="cards">
+              <li>
+                <h4>Owner-operated</h4>
+                <p>You work with the crew that’s on your site.</p>
+              </li>
+              <li>
+                <h4>Built for Bend winters</h4>
+                <p>Freeze/thaw-ready base and edge restraint.</p>
+              </li>
+              <li>
+                <h4>We stand by our work</h4>
+                <p>If we caused an issue, we make it right.</p>
+              </li>
+            </ul>
           </div>
         </div>
         <div class="hero__gallery">
           <figure class="hero__slide is-active" data-hero-slide>
-            <img src="assets/img/projects/1.3.jpeg" alt="Permeable paver driveway with lighting">
+            <img src="assets/img/projects/1.3.jpeg" data-heic-src="assets/img/projects/7pave.heic" data-heic-fallback="assets/img/projects/1.3.jpeg" alt="Courtyard paver patio with seating edge">
           </figure>
           <figure class="hero__slide" data-hero-slide>
-            <img src="assets/img/projects/2.2.jpeg" alt="Basalt steps cascading through a landscape">
+            <img src="assets/img/projects/2.7.jpeg" data-heic-src="assets/img/projects/6retain.heic" data-heic-fallback="assets/img/projects/2.7.jpeg" alt="Tiered block retaining wall with basalt steps">
           </figure>
           <figure class="hero__slide" data-hero-slide>
-            <img src="assets/img/projects/2.6.jpeg" alt="Flagstone walkway bordered by native plantings">
-          </figure>
-          <figure class="hero__slide" data-hero-slide>
-            <img src="assets/img/projects/2.3.jpeg" alt="Retaining wall with integrated seating">
+            <img src="assets/img/projects/2.6.jpeg" data-heic-src="assets/img/projects/4yard.heic" data-heic-fallback="assets/img/projects/2.6.jpeg" alt="Fresh sod bordered by stonework and planting beds">
           </figure>
         </div>
       </div>
@@ -94,20 +105,20 @@
 
     <section class="section section--accent reveal">
       <span class="eyebrow">Signature installs</span>
-      <h2>Stone, steel, and light arranged for four seasons</h2>
-      <p class="lead">Every detail is engineered for Bend's temperature swings—so your investment looks as strong in February as it does in July.</p>
+      <h2>Built for Bend winters</h2>
+      <p class="lead">Details that keep patios, steps, and paths looking sharp—February through July.</p>
       <div class="mosaic">
         <figure>
-          <img src="assets/img/projects/1.2.jpeg" alt="Crew laying a permeable paver base">
-          <figcaption>Permeable paver driveway • Pilot Butte</figcaption>
+          <img src="assets/img/projects/1.2.jpeg" data-heic-src="assets/img/projects/1pave.heic" data-heic-fallback="assets/img/projects/1.2.jpeg" alt="Crew screeding bedding sand for a paver patio">
+          <figcaption>Base prep and screed rails dial in paver elevation</figcaption>
         </figure>
         <figure>
-          <img src="assets/img/projects/2.1.jpeg" alt="Slope before step installation">
-          <figcaption>Drainage planning before stonework</figcaption>
+          <img src="assets/img/projects/2.2.jpeg" data-heic-src="assets/img/projects/2retain.heic" data-heic-fallback="assets/img/projects/2.2.jpeg" alt="Cutting basalt treads for hillside steps">
+          <figcaption>Custom-cut basalt treads shape a hillside stair run</figcaption>
         </figure>
         <figure>
-          <img src="assets/img/projects/2.7.jpeg" alt="Finished basalt steps with lighting">
-          <figcaption>Terraced steps • Deschutes River Trail</figcaption>
+          <img src="assets/img/projects/2.7.jpeg" data-heic-src="assets/img/projects/6retain.heic" data-heic-fallback="assets/img/projects/2.7.jpeg" alt="Segmental block retaining wall with stone steps">
+          <figcaption>Tiered retaining wall anchors steps and planting beds</figcaption>
         </figure>
       </div>
     </section>
@@ -118,26 +129,26 @@
       <div class="feature-grid">
         <article class="feature-card">
           <div class="feature-card__media">
-            <img src="assets/img/projects/2.3.jpeg" alt="Retaining wall curves with seating">
+            <img src="assets/img/projects/2.7.jpeg" data-heic-src="assets/img/projects/6retain.heic" data-heic-fallback="assets/img/projects/2.7.jpeg" alt="Tiered block retaining wall tied into steps">
           </div>
           <strong>Retaining &amp; seat walls</strong>
-          <p>Basalt, granite, and boulder blends engineered with drainage and geogrid tiebacks for slope control.</p>
+          <p>Block and natural stone blends engineered with drain tile, geogrid, and frost-rated footing.</p>
           <a class="link-arrow" href="services.html#masonry">Explore stonemasonry</a>
         </article>
         <article class="feature-card">
           <div class="feature-card__media">
-            <img src="assets/img/projects/1.1.jpeg" alt="Before image of a driveway before renovation">
+            <img src="assets/img/projects/1.3.jpeg" data-heic-src="assets/img/projects/7pave.heic" data-heic-fallback="assets/img/projects/1.3.jpeg" alt="Permeable paver courtyard with seating edge">
           </div>
           <strong>Paver driveways</strong>
-          <p>Permeable, plow-ready surfaces installed with open-graded base, polymeric sand, and low-maintenance edging.</p>
+          <p>Permeable, plow-ready surfaces installed with open-graded base, polymeric sand, and clean soldier borders.</p>
           <a class="link-arrow" href="services.html#pavers">See paver installs</a>
         </article>
         <article class="feature-card">
           <div class="feature-card__media">
-            <img src="assets/img/projects/2.6.jpeg" alt="Flagstone walkway weaving through landscaping">
+            <img src="assets/img/projects/2.6.jpeg" data-heic-src="assets/img/projects/3yard.heic" data-heic-fallback="assets/img/projects/2.6.jpeg" alt="Flagstone walkway with groundcover and turf transitions">
           </div>
           <strong>Walkways &amp; garden paths</strong>
-          <p>Flagstone and natural slabs set with thoughtful slope, lighting integration, and tidy lawn transitions.</p>
+          <p>Flagstone and natural slabs set with low planting pockets, tidy turf cuts, and lighting-ready conduit.</p>
           <a class="link-arrow" href="services.html#walkways">See walkways</a>
         </article>
       </div>
@@ -174,17 +185,19 @@
     <section class="container reveal">
       <header>
         <h2>Recent projects</h2>
-        <p>Browse installs ranging from permeable paver driveways to terraced stonework along the Deschutes.</p>
+        <p>Browse installs ranging from permeable paver driveways to terraced stonework across Central Oregon.</p>
       </header>
       <div id="filters" class="filters" aria-label="Project filters"></div>
-      <div id="gallery" class="gallery" data-source="assets/data/projects.json"></div>
+      <div id="gallery" class="gallery" data-source="assets/data/projects.json">
+        <p class="gallery__loading" role="status">Loading recent projects…</p>
+      </div>
       <div class="sticky-cta">
         <a class="btn btn-primary" href="projects.html">Explore the full gallery</a>
       </div>
     </section>
 
     <section class="container reveal">
-      <h2>The Wrenley process</h2>
+      <h2>The process</h2>
       <div class="process-steps">
         <div class="process-step">
           <span>01</span>
@@ -211,27 +224,22 @@
 
     <section class="section section--panel reveal">
       <h2>Material pairings we love</h2>
-      <p>We help you balance palette and performance—blending local stone, metals, and plantings for a cohesive space.</p>
+      <p>We help you balance palette and performance—mixing stone textures, planting, and lighting for four-season function.</p>
       <div class="material-scroll">
         <article class="material-card">
-          <img src="assets/img/projects/2.4.jpeg" alt="Basalt wall detail with lighting">
+          <img src="assets/img/projects/2.7.jpeg" data-heic-src="assets/img/projects/6retain.heic" data-heic-fallback="assets/img/projects/2.7.jpeg" alt="Retaining wall lit with warm accent lighting">
           <h3>Basalt + warm lighting</h3>
-          <p>Basalt walls paired with bronze lighting deliver contrast at night and maintain traction in winter.</p>
+          <p>Low-voltage fixtures tuck beneath capstones to highlight texture and keep steps visible after dark.</p>
         </article>
         <article class="material-card">
-          <img src="assets/img/projects/2.2.jpeg" alt="Stone steps with corten edging">
-          <h3>Stone + corten</h3>
-          <p>Corten accents frame steps, create weed-free planters, and complement Central Oregon foliage.</p>
+          <img src="assets/img/projects/1.3.jpeg" data-heic-src="assets/img/projects/5pave.heic" data-heic-fallback="assets/img/projects/1.3.jpeg" alt="Paver patio wrapped with seating edge and inlay border">
+          <h3>Pavers + seating edges</h3>
+          <p>Contrasting borders and seat walls define gathering zones without introducing railings or clutter.</p>
         </article>
         <article class="material-card">
-          <img src="assets/img/projects/2.4.5.jpeg" alt="Steel handrail beside stone steps">
-          <h3>Steel handrails</h3>
-          <p>Powder-coated rails add accessibility without stealing attention from hand-set stonework.</p>
-        </article>
-        <article class="material-card">
-          <img src="assets/img/projects/2.6.jpeg" alt="Flagstone walkway with ground cover">
+          <img src="assets/img/projects/2.6.jpeg" data-heic-src="assets/img/projects/3yard.heic" data-heic-fallback="assets/img/projects/2.6.jpeg" alt="Flagstone path weaving through thyme and turf">
           <h3>Flagstone + thyme</h3>
-          <p>Low-growing groundcovers soften joints and release aromatics when brushed underfoot.</p>
+          <p>Creeping thyme softens joints, stays fragrant, and tolerates light foot traffic around stonework.</p>
         </article>
       </div>
     </section>
@@ -261,7 +269,7 @@
         <div>
           <h3>Ready for a site visit?</h3>
           <p>Share your project goals and we'll schedule an on-site consultation.</p>
-          <a class="btn btn-primary" href="contact.html#quote">Request a quote</a>
+          <a class="btn btn-primary btn--spaced" href="contact.html#quote">Request a quote</a>
         </div>
       </div>
     </section>
@@ -298,7 +306,8 @@
       "projects": [
         {
           "id": "pilot-bend-drive",
-          "title": "Paver Driveway – Pilot Butte",
+          "category": "Paver Installations",
+          "title": "Permeable Driveway Rebuild",
           "tags": ["Pavers", "Driveways"],
           "thumb": "assets/img/projects/1.3.jpeg",
           "images": [
@@ -318,8 +327,31 @@
           }
         },
         {
+          "id": "shevlin-paver-courtyard",
+          "category": "Paver Installations",
+          "title": "Courtyard Paver Patio",
+          "tags": ["Pavers", "Patios", "Outdoor Living"],
+          "thumb": "assets/img/projects/6pave.heic",
+          "placeholder": "assets/img/projects/1.3.jpeg",
+          "images": [
+            "assets/img/projects/1pave.heic",
+            "assets/img/projects/2pave.heic",
+            "assets/img/projects/3pave.heic",
+            "assets/img/projects/4pave.heic",
+            "assets/img/projects/5pave.heic",
+            "assets/img/projects/6pave.heic",
+            "assets/img/projects/7pave.heic"
+          ],
+          "beforeAfter": {
+            "before": "assets/img/projects/1pave.heic",
+            "after": "assets/img/projects/7pave.heic"
+          },
+          "summary": "Rebuilt a weathered patio with permeable pavers, drainage stone, and a new seating edge."
+        },
+        {
           "id": "deschutes-steps",
-          "title": "Terraced Steps – Deschutes River Trail",
+          "category": "Retaining Walls & Steps",
+          "title": "Terraced Step System",
           "tags": ["Steps", "Masonry", "Retaining Walls"],
           "thumb": "assets/img/projects/2.7.jpeg",
           "images": [
@@ -338,10 +370,52 @@
             "after": "assets/img/projects/2.7.jpeg"
           },
           "summary": "Basalt steps tied into a low retaining wall to manage slope transitions."
+        },
+        {
+          "id": "high-desert-retaining-wall",
+          "category": "Retaining Walls & Steps",
+          "title": "Tiered Block Retaining Wall",
+          "tags": ["Retaining Walls", "Steps", "Drainage"],
+          "thumb": "assets/img/projects/6retain.heic",
+          "placeholder": "assets/img/projects/2.7.jpeg",
+          "images": [
+            "assets/img/projects/1retain.heic",
+            "assets/img/projects/2retain.heic",
+            "assets/img/projects/3retain.heic",
+            "assets/img/projects/4retain.heic",
+            "assets/img/projects/5retain.heic",
+            "assets/img/projects/6retain.heic"
+          ],
+          "beforeAfter": {
+            "before": "assets/img/projects/1retain.heic",
+            "after": "assets/img/projects/6retain.heic"
+          },
+          "summary": "Segmental block wall with stone steps and subsurface drainage to hold the hillside in place."
+        },
+        {
+          "id": "bend-backyard-refresh",
+          "category": "Yard & Turf Installs",
+          "title": "Backyard Lawn & Stone Border",
+          "tags": ["Landscaping", "Lawns", "Stonework"],
+          "thumb": "assets/img/projects/4yard.heic",
+          "placeholder": "assets/img/projects/2.6.jpeg",
+          "images": [
+            "assets/img/projects/1yard.heic",
+            "assets/img/projects/2yard.heic",
+            "assets/img/projects/3yard.heic",
+            "assets/img/projects/4yard.heic"
+          ],
+          "beforeAfter": {
+            "before": "assets/img/projects/1yard.heic",
+            "after": "assets/img/projects/4yard.heic"
+          },
+          "summary": "New lawn install with stone border, soil prep, irrigation tuning, and fresh sod delivery."
         }
       ]
     }
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/heic2any@0.0.3/dist/heic2any.min.js" defer></script>
+  <script src="assets/js/heic-loader.js" defer></script>
   <script src="assets/js/main.js" defer></script>
   <script src="assets/js/data.js" defer></script>
   <script src="assets/js/gallery.js" defer></script>
